--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
-    "mongoose": "^8.8.0",
-    "mysql2": "^3.11.3",
-    "sequelize": "^6.37.5",
-    "uuid": "^11.0.2"
+    "mongoose": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
